HelloUltraviolet/Source/Fixtures/RejectedSource/Coverage.uv
//! Coverage checks for rejected-source fixture metadata.

public procedure expectedRejectedSourceFixtureCount() -> usize {
    return 370usize
}

public procedure rejectedSourceFixtureCount() -> usize {
    return sourceTextRejectedSourceFixtureCount() +
        parsingRejectedSourceFixtureCount() +
        namesRejectedSourceFixtureCount() +
        proceduresRejectedSourceFixtureCount() +
        statementsRejectedSourceFixtureCount() +
        expressionsRejectedSourceFixtureCount() +
        patternsRejectedSourceFixtureCount() +
        polymorphismRejectedSourceFixtureCount() +
        ffiRejectedSourceFixtureCount() +
        keysRejectedSourceFixtureCount() +
        parallelismRejectedSourceFixtureCount() +
        comptimeRejectedSourceFixtureCount()
}

public procedure validatedRejectedSourceFixtureCount() -> usize {
    return validatedSourceTextRejectedSourceFixtureCount() +
        validatedParsingRejectedSourceFixtureCount() +
        validatedNamesRejectedSourceFixtureCount() +
        validatedProceduresRejectedSourceFixtureCount() +
        validatedStatementsRejectedSourceFixtureCount() +
        validatedExpressionsRejectedSourceFixtureCount() +
        validatedPatternsRejectedSourceFixtureCount() +
        validatedPolymorphismRejectedSourceFixtureCount() +
        validatedFFIRejectedSourceFixtureCount() +
        validatedKeysRejectedSourceFixtureCount() +
        validatedParallelismRejectedSourceFixtureCount() +
        validatedComptimeRejectedSourceFixtureCount()
}

public procedure rejectedSourceFixturesAreIndexed() -> bool {
    return rejectedSourceFixtureCount() == expectedRejectedSourceFixtureCount() &&
        validatedRejectedSourceFixtureCount() == expectedRejectedSourceFixtureCount()
}
